deploy/kubernetes/kube-settings/02-deployment-xero-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: noted2xero
  name: noted2xero
  namespace: apps-noted-xero
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: noted2xero
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:      
      labels:
        app: noted2xero
    spec:
      containers:
        - image: phiroict/noted2xero_web:0.3.2
          imagePullPolicy: IfNotPresent
          name: noted2xero-web-lvxq7
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
