deploy/kubernetes/kube-settings/03-deployment-xero-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: noted-frontend
  name: noted-frontend
  namespace: apps-noted-xero
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: noted-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:      
      labels:
        app: noted-frontend
    spec:
      containers:
        - image: phiroict/xero_frontend@sha256:6826cf14e8b2feb2c119cb7fd693fddb75fac1c81e5a0e6903834d5c9c007748
          imagePullPolicy: Always
          name: noted-frontend
          livenessProbe:
            httpGet:
              port: 80
              scheme: HTTP
          resources:
            limits:
              memory: 256M
              cpu: 10m
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountpath: /etc/nginx
            name: main-page
            subPath: index.html
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
      terminationGracePeriodSeconds: 30
      volumes:
        - name: main-page
