deploy/kubernetes/kube-settings/04-service-xero-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: noted-frontend-service
  namespace: apps-noted-xero
spec:
  type: NodePort
  selector:
    app: noted-frontend
  ports:
  - port: 80
    targetPort: 80
    name: http-xerowebport
    nodePort: 30003
