deploy/kubernetes/kube-settings/05-service-xero-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: note2xero-srv
  namespace: apps-noted-xero
spec:
  type: NodePort
  selector:
    app: noted-frontend
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      nodePort: 30002
